--- a/public/typography.css
+++ b/public/typography.css
@@ -7,22 +7,27 @@ h1, h2, h3, h4, h5 {
 
 h1 {
   font-size: 28px;
+  margin-bottom: 24px;
 }
 
 h2 {
   font-size: 24px;
+  margin-bottom: 20px;
 }
 
 h3 {
   font-size: 20px;
+  margin-bottom: 20px;
 }
 
 h4 {
   font-size: 18px;
+  margin-bottom: 18px;
 }
 
 h5 {
   font-size: 14px;
+  margin-bottom: 14px;
 }
 
 p {
@@ -35,6 +40,8 @@ p {
 a {
   text-decoration: underline;
   cursor: pointer;
+  color: #000033;
+  line-height: 24px;
 }
 
 /* Callouts */
@@ -64,12 +71,3 @@ blockquote {
 blockquote > .citation {
   font-size: 13px;
 }
-
-
-
-
-
-
-
-
-
