--- a/public/forms.css
+++ b/public/forms.css
@@ -1,4 +1,5 @@
 /* Inputs */
+
 .field-wrap {
   margin: 0;
   clear: both;
@@ -23,7 +24,7 @@ input[type="password"],
 input[type="number"],
 input[type="email"],
 input[type="search"] {
-  font-size: inherit;
+  font-size: 16px;
   display: inline-block;
   background-color: #fff;
   width: 100%;
@@ -53,6 +54,57 @@ input[type="number"]:focus,
 input[type="email"]:focus,
 input[type="search"]:focus {
   border: 2px solid #666C71;
+  outline: none
+}
+
+/* Selects */
+
+.select-wrap {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  border-radius: 5px;
+  min-width: 50px;
+  max-width: 625px;
+  width: 100%;
+  min-height: 45px;
+  background-color: #ececec;
+  margin: 0 0 0px 0;
+  font-weight: 400;
+  cursor: pointer;
+  color: #5B5E61;
+}
+
+.select-wrap .icon {
+  position: absolute;
+  line-height: 48px;
+  /*font-size: 11px;*/
+  pointer-events: none;
+  right: 8px;
+}
+
+.select-wrap select {
+  width: 100%;
+  font-size: 16px;
+  line-height: 50px;
+  padding-left: 10px;
+  position: absolute;
+  border: none;
+  box-shadow: none;
+  background: transparent;
+  background-image: none;
+  -webkit-appearance: none;
+  cursor: pointer;
+  /*z-index: 0;*/
+  font-family: 'Avenir Medium', 'Helvetic-Neue', Helvetica, Arial, sans-serif;
+  color: #5B5E61;
+}
+
+.select-wrap select:focus {
+  height: 45px;
+  line-height: 45px;
+  padding-left: 8px;
+  border: 1px solid #666C71;
   outline: none
 }
 
