--- a/public/base.css
+++ b/public/base.css
@@ -125,9 +125,11 @@ q {
 }
 
 
-
-
-
-
-
-
+/*.selfclear:before,
+.selfclear:after {
+  content:" ";
+  display:table
+}
+.selfclear:after {
+  clear:both
+}*/
