add heroes and banners

--- a/public/images.css
+++ b/public/images.css
@@ -1,6 +1,7 @@
 /* Images */
 
-.img {
+.img,
+[class^="img-"] {
   display: inline-block;
   background-position: center center;
   background-repeat: no-repeat;
@@ -26,16 +27,4 @@
   max-width: 350px;
   height: 100%;
   max-height: 350px;
-}
-
-.img-banner {
-  width: 100%;
-  height: 100%;
-  max-height: 260px;
-}
-
-.img-hero {
-  width: 100%;
-  height: 100%;
-  max-height: 575px;
 }
