--- a/public/banners.css
+++ b/public/banners.css
@@ -5,6 +5,7 @@
   width: 100%;
   height: 100%;
   max-height: 260px;
+  position: relative;
 }
 
 .img-banner {
@@ -20,10 +21,25 @@
   width: 100%;
   height: 100%;
   max-height: 575px;
+  position: relative;
 }
 
 .img-hero {
   width: 100%;
   height: 100%;
   max-height: 575px;
+}
+
+/* Specifics for the hero header */
+.hero .hero-text {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 80px;
+}
+
+.hero h1,
+.hero h2,
+.hero h3 {
+  margin-bottom: 0;
 }
