--- a/public/base.css
+++ b/public/base.css
@@ -32,7 +32,7 @@ html:before {
 *:after {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
-  box-sizing: border-box
+  box-sizing: border-box;
 }
 
 html,
