--- a/public/images.css
+++ b/public/images.css
@@ -1,30 +1,34 @@
 /* Images */
 
+img,
 .img,
 [class^="img-"] {
   display: inline-block;
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+  outline: 1px #fff solid;  /* http://stackoverflow.com/questions/32603900/remove-inside-image-border-with-css */
+  outline-offset: -1px;
 }
 
 .img-avatar {
   width: 100%;
-  max-width: 141px;
+  /*max-width: 141px;*/
   height: 141px;
   max-height: 141px;
 }
 
 .img-tile {
   width: 100%;
-  max-width: 300px;
+  /*max-width: 300px;*/
   height: 100%;
   max-height: 175px;
 }
 
 .img-square {
   width: 100%;
-  max-width: 350px;
+  /*max-width: 350px;*/
   height: 100%;
   max-height: 350px;
 }
+
